<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.14</version>
        <relativePath/>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.hongxi</groupId>
    <artifactId>multi-redis-spring-boot</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>multi-redis-spring-boot</name>
    <description>Spring Boot Starter for multiple Redis clusters</description>
    <url>https://github.com/javahongxi/multi-redis-spring-boot-starter</url>

    <modules>
        <module>multi-redis-spring-boot-autoconfigure</module>
        <module>multi-redis-spring-boot-starter</module>
        <module>multi-redis-spring-boot-sample</module>
    </modules>

    <properties>
        <java.version>17</java.version>
    </properties>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>javahongxi</name>
            <url>https://github.com/javahongxi</url>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/javahongxi/multi-redis-spring-boot-starter.git</connection>
        <url>https://github.com/javahongxi/multi-redis-spring-boot-starter</url>
    </scm>

</project>
